[project]
name = "ecs_tools_py"
version = "1.4"
dependencies = [
    "ecs_py @ git+https://github.com/vphpersson/ecs_py.git",
    'string_utils_py @ git+https://github.com/vphpersson/string_utils_py.git#egg=string_utils_py'
]

[project.optional-dependencies]
user_agent = [
    'user-agents',
    'ua-parser',
]
http = [
    'http_lib @ git+https://github.com/vphpersson/http_lib.git#egg=http_lib',
    'user-agents',
    'ua-parser',
    'python-magic'
]
public_suffix = [
    'public_suffix @ git+https://github.com/vphpersson/public_suffix.git#egg=public_suffix',
    'http_lib @ git+https://github.com/vphpersson/http_lib.git#egg=http_lib',
]
email = [
    'abnf_parse @ git+https://github.com/vphpersson/abnf_parse.git#egg=abnf_parse'
]
process = [
    'psutil'
]

